[project]
name = "wotmud-player"
version = "0.1.0"
description = "Independent WOTMud player"
authors = [
    {name = "Masha Loianych",email = "mloianych@gmail.com"}
]


readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "telnetlib3 (>=2.0.4,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "wotmud_player" }  # No "from = src" here
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
